--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -7,6 +7,8 @@ $card-background-color: #F7F8F9;
 $nav-bar-height: 125px;
 $nav-bar-color: #999997;
 $light-grey: #F5F5F5;
+$filler-color: #07DDEC;
+$others-color: #2FEF1F;
 
 $font-size-extra-large: 2.5em;
 $font-size-large: 1.6em;
