--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
@@ -1,74 +1,50 @@
 <div class="modal">
-  <div class="product-modal">
-    <div class="modal-header">
-      <h1>{{product?.name}}</h1>
-      <i class="material-icons icon-close" (click)="closeModal()">
-        clear
-      </i>
-    </div>
-    <div class="modal-content">
-      <div class="slideshow">
-        <img src="../../../assets/images/people.jpg" />
-        <!--<div class="arrow"><span>&#x3c;</span></div>-->
-        <!--<div class="arrow"><span>&#x3e;</span></div>-->
-        <i class="material-icons">keyboard_arrow_left</i>
-        <i class="material-icons">keyboard_arrow_right</i>
-      </div>
-      <div class="product-info">
-        <div class="menu">
-          <mat-tab-group mat-align-tabs="center">
-            <mat-tab label="Purpose">
-              <div class="details">
-                <!--<h1>Purpose of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.purpose}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-            <mat-tab label="Scope">
-              <div class="details">
-                <!--<h1>Scope of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.scope}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-            <mat-tab label="Options">
-              <div class="details">
-                <!--<h1>Options of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.options}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
+    <div class="product-modal">
+        <div class="title-container">
 
-            <mat-tab label="Specs">
-              <div class="details">
-                <!--<h1>Specs of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.specs}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-            <mat-tab label="Principle">
-              <div class="details">
-                <!--<h1>Principle of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.principle}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-            <mat-tab label="Set Up">
-              <div class="details">
-                <!--<h1>Set Up of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.setup}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-          </mat-tab-group>
+            <div class="title-title">
+                <h1>{{product?.name}}</h1>
+            </div>
+
+            <div class="slideshow">
+                <img src="../../../assets/images/people.jpg"/>
+                <i class="material-icons">keyboard_arrow_left</i>
+                <i class="material-icons">keyboard_arrow_right</i>
+            </div>
+
         </div>
-      </div>
+
+        <div class="content-container">
+            <div class="content-title">
+                <div class="benefit-container">
+                    <h1>Suitable for</h1>
+                    <span *ngFor="let type of types">{{type.value}}</span>
+                </div>
+
+                <i class="material-icons icon-close" (click)="closeModal()">
+                    clear
+                </i>
+            </div>
+            <div class="menu">
+                <mat-tab-group mat-align-tabs="center">
+                    <mat-tab label="Description">
+                        <div class="details">
+                                {{product?.description}}
+                        </div>
+                    </mat-tab>
+                    <mat-tab label="Tech specs">
+                        <div class="details">
+                            {{product?.spec}}
+                        </div>
+                    </mat-tab>
+                    <mat-tab label="Benefits">
+                        <div class="details">
+                            {{product?.solution._benefitDescription}}
+                        </div>
+                    </mat-tab>
+                </mat-tab-group>
+            </div>
+
+        </div>
     </div>
-  </div>
 </div>
