--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -5,12 +5,15 @@
   }
 
   ::ng-deep app-slide-side-navigation {
+    display: flex;
+    justify-content: center;
     a {
       cursor: pointer;
       color: black;;
       text-decoration: none;
     }
     ul {
+      text-align: left;
       padding: 0;
       list-style: none;
       li {
