Fixed styling issue product detail on mobile + changed product model

--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
@@ -39,7 +39,7 @@
                     </mat-tab>
                     <mat-tab label="Benefits">
                         <div class="details">
-                            {{product?.solution._benefitDescription}}
+                            {{product?.solution.benefitDescription}}
                         </div>
                     </mat-tab>
                 </mat-tab-group>
