--- a/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
+++ b/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
@@ -17,53 +17,19 @@
       <div class="product-info">
         <div class="menu">
           <mat-tab-group mat-align-tabs="center">
-            <mat-tab label="Purpose">
+            <mat-tab label="Description">
               <div class="details">
-                <!--<h1>Purpose of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.purpose}}-->
-                <!--</p>-->
+                  {{product?.description}}
               </div>
             </mat-tab>
-            <mat-tab label="Scope">
+            <mat-tab label="Tech specs">
               <div class="details">
-                <!--<h1>Scope of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.scope}}-->
-                <!--</p>-->
+                  {{product?.spec}}
               </div>
             </mat-tab>
-            <mat-tab label="Options">
+            <mat-tab label="Benefits">
               <div class="details">
-                <!--<h1>Options of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.options}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-
-            <mat-tab label="Specs">
-              <div class="details">
-                <!--<h1>Specs of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.specs}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-            <mat-tab label="Principle">
-              <div class="details">
-                <!--<h1>Principle of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.principle}}-->
-                <!--</p>-->
-              </div>
-            </mat-tab>
-            <mat-tab label="Set Up">
-              <div class="details">
-                <!--<h1>Set Up of {{product?.name}}</h1>-->
-                <!--<p>-->
-                  <!--{{product?.setup}}-->
-                <!--</p>-->
+                  {{product?.solution?.benefitDescription}}
               </div>
             </mat-tab>
           </mat-tab-group>
