added additional styling product page

--- a/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
+++ b/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
@@ -41,7 +41,7 @@ section#desktop-navigation {
     }
 
     img#logo {
-      margin-left: 25px;
+      //margin-left: 25px;
       width: $image-width;
       height: $image-height;
     }
