--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
@@ -29,16 +29,19 @@
                 <mat-tab-group mat-align-tabs="center">
                     <mat-tab label="Description">
                         <div class="details">
+                            <h1>Description</h1>
                                 {{product?.description}}
                         </div>
                     </mat-tab>
                     <mat-tab label="Tech specs">
                         <div class="details">
+                            <h1>Tech specs</h1>
                             {{product?.spec}}
                         </div>
                     </mat-tab>
                     <mat-tab label="Benefits">
                         <div class="details">
+                            <h1>Benefits</h1>
                             {{product?.solution.benefitDescription}}
                         </div>
                     </mat-tab>
