--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
@@ -1,107 +1,117 @@
 @import "../../../../../assets/variables";
+
 .modal {
-    z-index: 100;
+  z-index: 100;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+
+  .details {
+    padding: 2% 10%;
+    h1 {
+      font-size: 1.5em;
+      padding: 0;
+      margin: 2% 0;
+    }
+  }
+  .product-modal {
+    padding: 10px;
+    background-color: white;
+    width: 90%;
+    height: auto;
     position: fixed;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    .product-modal {
-        padding: 10px;
-        background-color: white;
-        width: 90%;
-        height: auto;
-        position: fixed;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: row;
+    border-radius: 2.5px;
+
+    .title-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex: 1;
+
+      h1 {
+        padding: 0;
+        margin: 5px 0;
+        text-transform: uppercase;
+        font-size: 2em;
+
+      }
+
+      .slideshow {
+        position: relative;
+        height: fit-content;
+        img {
+          width: 100%;
+          border-radius: 2.5px;
+          box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
+          :before {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
+            opacity: .75;
+            z-index: 0;
+          }
+        }
+
+        i {
+          color: $main-color;
+          text-shadow: 4px 4px 30px rgba(0, 0, 0, 1);
+          font-size: 100px;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          &:first-of-type {
+            left: 0;
+          }
+          &:last-of-type {
+            right: 0;
+          }
+        }
+      }
+    }
+
+    .content-container {
+      padding: 0 2% 0 5%;
+      flex: 2;
+      .content-title {
         display: flex;
-        flex-direction: row;
-        border-radius: 2.5px;
+        justify-content: space-between;
 
-        .title-container{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            flex: 1;
+        h1 {
+          padding: 0;
+          text-transform: uppercase;
+          font-size: 1.5em;
+          margin: 5px 0;
 
-            h1{
-                padding: 0;
-                margin: 5px 0;
-                text-transform: uppercase;
-                font-size: 2em;
-
-            }
-
-            .slideshow {
-                position: relative;
-                height: fit-content;
-                img {
-                    width: 100%;
-                    border-radius: 2.5px;
-                    box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
-                    :before {
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        right: 0;
-                        bottom: 0;
-                        left: 0;
-                        background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
-                        opacity: .75;
-                        z-index: 0;
-                    }
-                }
-
-                i {
-                    color: $main-color;
-                    text-shadow: 4px 4px 30px rgba(0, 0, 0, 1);
-                    font-size: 100px;
-                    position: absolute;
-                    top: 50%;
-                    transform: translateY(-50%);
-                    &:first-of-type {
-                        left: 0;
-                    }
-                    &:last-of-type {
-                        right: 0;
-                    }
-                }
-            }
         }
-
-        .content-container{
-            padding:0 2% 0 5%;
-            flex: 2;
-            .content-title{
-                display: flex;
-                justify-content: space-between;
-
-                h1{
-                    padding: 0;
-                    text-transform: uppercase;
-                    font-size: 1.5em;
-                    margin: 5px 0;
-
-                }
-            }
-        }
+      }
     }
+  }
 
-    ::ng-deep .mat-tab-label-active {
-        color: $main-color !important;
-        opacity: 1 !important;
-    }
+  ::ng-deep .mat-tab-label-active {
+    color: $main-color !important;
+    opacity: 1 !important;
+  }
 
-    ::ng-deep .mat-tab-label {
-        padding: 0 10px !important;
-        min-width: 100px !important;
-    }
+  ::ng-deep .mat-tab-label {
+    padding: 0 10px !important;
+    min-width: 100px !important;
+  }
 
-    ::ng-deep .mat-tab-labels{
-        justify-content: center; /* align items in Main Axis */
-    }
+  ::ng-deep .mat-tab-labels {
+    justify-content: center; /* align items in Main Axis */
+  }
 }
