--- a/src/app/pages/products/product.page.html
+++ b/src/app/pages/products/product.page.html
@@ -1,9 +1,32 @@
 <section class="product-page">
     <div class="banner">
-        <h1>Our products</h1>
+        <div class="content">
+            <h1>Our products</h1>
+            <div class="banner-button" (click)="scrollToProducts()">
+                Discover our products
+                <span class="icon ion-ios-arrow-forward"></span>
+            </div>
+        </div>
     </div>
 
-    <app-product-list [products]="products"></app-product-list>
+    <div class="article">
+        <h1>Discover our selection </h1>
+
+        <mat-card>
+            Parts
+        </mat-card>
+
+        <mat-card>
+            Upgrades
+        </mat-card>
+
+        <mat-card>
+        </mat-card>
+    </div>
+
+    <div #productsView class="productsContainer">
+        <app-product-list [products]="products"></app-product-list>
+    </div>
 
 
     <app-slide-side-navigation>
@@ -26,7 +49,7 @@
             <h1>Suitable for</h1>
             <ul>
                 <li *ngFor="let solution of suitableFor">
-                    <mat-checkbox >{{solution}}</mat-checkbox>
+                    <mat-checkbox>{{solution}}</mat-checkbox>
                 </li>
             </ul>
 
