--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -9,7 +9,9 @@
 
     <div class="product-content">
         <h2>{{product?.name}}</h2>
-        <p>Short into</p>
+        <p>LLorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+            lectus tellus. Quisque vel hendrerit nisl.</p>
     </div>
 
     <div *ngIf="benifts" class="product-footer">
