--- a/src/app/pages/products/parts/parts.component.html
+++ b/src/app/pages/products/parts/parts.component.html
@@ -1,6 +1,12 @@
 <section class="parts-page">
     <div class="banner">
-        <h1>Parts</h1>
+        <div class="content">
+            <h1>Parts</h1>
+            <div class="banner-button outlined" routerLink="/products">
+                <span class="icon ion-ios-arrow-back"></span>
+                Return to products
+            </div>
+        </div>
     </div>
 
     <div class="article">
