--- a/src/app/pages/products/services/services.component.html
+++ b/src/app/pages/products/services/services.component.html
@@ -1,6 +1,12 @@
 <section class="service-page">
     <div class="banner">
-        <h1>Services</h1>
+        <div class="content">
+            <h1>Services</h1>
+            <div class="banner-button outlined" routerLink="/products">
+                <span class="icon ion-ios-arrow-back"></span>
+                Discover our products
+            </div>
+        </div>
     </div>
 
     <div class="article">
