--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -9,7 +9,6 @@
   margin-bottom: 30px;
   transition: all .2s ease-in-out;
   position: relative;
-  height: 500px;
 
   &:hover {
     transform: scale(1.025);
@@ -40,6 +39,7 @@
         text-transform: uppercase;
         font-weight: bold;
         padding: 5px;
+        margin: 0 5px;
         background-color: $main-color;
 
         &.BOTTLE_WASHERS {
@@ -80,7 +80,7 @@
 
   .product-footer {
     text-align: center;
-    padding: 10px;
+    padding:  10px;
     box-shadow: 0 0 3px #ccc;
   }
 }
