--- a/src/app/components/products/product-list/product-list.page.html
+++ b/src/app/components/products/product-list/product-list.page.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="content">
-            <app-product *ngFor="let product of productList" [product]="product"></app-product>
+            <app-product (click)="clickOnProduct()" *ngFor="let product of productList" [product]="product"></app-product>
         </div>
     </div>
 </section>
