--- a/src/app/pages/products/upgrades/upgrades.component.html
+++ b/src/app/pages/products/upgrades/upgrades.component.html
@@ -1,6 +1,13 @@
 <section class="upgrades-page">
     <div class="banner">
-        <h1>Upgrades, add-ons and conversions</h1>
+        <div class="content">
+            <h1>Upgrades, <br/> Add-Ons and <br/> Conversions</h1>
+            <div class="banner-button outlined" routerLink="/products">
+                <span class="icon ion-ios-arrow-back"></span>
+                Discover our products
+            </div>
+        </div>
+
     </div>
 
     <div class="article">
