--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,13 +114,41 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  padding: 10% 0;
   filter:contrast(150%) brightness(100%) grayscale(1px);
+
+  @media (min-width: 768px) {
+    align-items: flex-start;
+  }
 
   .content{
     margin-left: 10%;
     h1{
       margin: 10% 0;
+    }
+
+    .banner-button {
+      z-index: 1;
+      cursor: pointer;
+      border-radius: 100px;
+      font-size: 1.2em;
+      background-color: $main-color;
+      color: white;
+      padding: 1em 1.5em 1em 1em;
+      position: relative;
+
+      &.outlined{
+        background-color: transparent;
+        border: 5px solid $main-color;
+        color: $main-color;
+
+      }
+      .ion-ios-arrow-forward, .ion-ios-arrow-back {
+        display: inline-block;
+        transition: left .5s ease-in-out;
+        padding-left: 2px;
+      }
     }
   }
   h1{
