--- a/src/app/components/slide-side-navigation/slide-side-navigation.component.scss
+++ b/src/app/components/slide-side-navigation/slide-side-navigation.component.scss
@@ -42,11 +42,11 @@ section#slide-side-navigation{
 
 
   .content{
+    overflow: scroll;
     max-width: 0;
     transition: all ease-in-out .2s ;
     z-index: 100;
     text-align:center;
-    overflow: hidden;
     width: unset;
     min-width: unset;
     box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
