--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -88,6 +88,7 @@
   ::ng-deep app-slide-side-navigation {
     display: flex;
     justify-content: center;
+    overflow: scroll;
     a {
       cursor: pointer;
       color: black;;
@@ -103,6 +104,7 @@
     }
     h1 {
       font-size: 1.5em;
+      margin: 0;
       color: $main-color;
     }
   }
