--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,16 +6,34 @@ footer{
   flex-direction: row;
   align-items: center;
   background-color: $footer-color;
-  justify-content: space-between;
+  justify-content: center;
 
   img{
     margin: 10px 25px;
+    height: 75px;
+    width: 75px;
   }
 
   .footer-info{
     flex-direction: column;
     display: inline-flex;
     justify-content: center;
-    padding: 20px;
+    font-size: 0.7em;
+  }
+
+  @media (min-width: 768px) {
+    justify-content: space-between !important;
+
+    img{
+      height: 150px;
+      width: 150px;
+    }
+    .footer-info{
+      flex-direction: column;
+      display: inline-flex;
+      justify-content: center;
+      font-size: 1em;
+    }
+
   }
 }
