--- a/src/app/components/slide-side-navigation/slide-side-navigation.component.html
+++ b/src/app/components/slide-side-navigation/slide-side-navigation.component.html
@@ -1,4 +1,4 @@
-<section id="slide-side-navigation">
+<section label="Filter" id="slide-side-navigation">
   <span class="slide-out-button" (click)="toggle()" [ngClass]="{'open':open}">
 
     <mat-icon *ngIf="!open">
