--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -5,7 +5,7 @@
             Global Experts in RGB
         </div>
         <div class="welcome-button" (click)="scrollToVision()">
-            Learn more about us
+            More about us
             <span class="icon ion-ios-arrow-forward"></span>
         </div>
     </div>
