--- a/src/app/pages/products/product.page.html
+++ b/src/app/pages/products/product.page.html
@@ -2,10 +2,10 @@
     <div class="banner">
         <div class="content">
             <h1>Our products</h1>
-            <div class="banner-button" (click)="scrollToProducts()">
-                Discover our products
-                <span class="icon ion-ios-arrow-forward"></span>
-            </div>
+            <!--<div class="banner-button" (click)="scrollToProducts()">-->
+                <!--Discover our products-->
+                <!--<span class="icon ion-ios-arrow-forward"></span>-->
+            <!--</div>-->
         </div>
     </div>
 
