--- a/src/app/components/language-picker/language-picker.component.scss
+++ b/src/app/components/language-picker/language-picker.component.scss
@@ -4,10 +4,16 @@
   display: none;
 }
 
+//::ng-deep mat-select, ::ng-deep mat-option{
+//  background-color: rgba(255,255,255,0.6) !important;
+//}
+
 .option {
+  margin: 10px;
   text-align-last: center;
   height: 68px;
   padding: 0;
+  background-color: transparent !important;
 }
 
 ::ng-deep .mat-select-value-text {
@@ -49,7 +55,7 @@
   }
 }
 
-mat-form-field{
+#language-picker{
   color: black !important;
   border-left: 3px solid black !important;
   &.transparent {
