--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -1,7 +1,12 @@
 @import "../../../../assets/variables";
 
+//border: 1px solid #EEEE;
+//    background: #F7F8F9;
+
+
 .product-container {
   width: 100%;
+  border-radius: 15px 15px 15px 15px;
   max-width: 300px;
   box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
   display: flex;
@@ -17,7 +22,8 @@
 
   .product-header {
     position: relative;
-
+    border-radius: 15px 15px 15px 15px;
+    overflow: hidden;
     img {
       height: auto;
       width: 100%;
@@ -25,9 +31,9 @@
 
     .label-container {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       position: absolute;
-      bottom: 0;
+      top: 0;
       left: 0;
       margin: 20px;
 
@@ -61,13 +67,16 @@
 
   .product-content {
     padding: 5px;
-    min-height: 200px;
-    max-height: 200px;
+    min-height: 50px;
+    max-height: 50px;
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
 
     h2 {
+      margin-left: 20px;
+      text-align: left;
+      font-size: 1.5em;
       margin-top: 0;
       color: $main-color;
     }
@@ -79,6 +88,7 @@
   }
 
   .product-footer {
+    background-color: $card-background-color;
     text-align: center;
     padding:  10px;
     box-shadow: 0 0 3px #ccc;
