--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
@@ -12,7 +12,7 @@
   background-color: rgba(0, 0, 0, 0.4);
 
   .details {
-    padding: 2% 10%;
+   // padding: 2% 10%;
     h1 {
       font-size: 1.5em;
       padding: 0;
@@ -22,7 +22,7 @@
   .product-modal {
     padding: 10px;
     background-color: white;
-    width: 90%;
+    width: 60%;
     height: auto;
     position: fixed;
     left: 50%;
