--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -2,7 +2,24 @@
 
 .product-page {
   .banner {
-    background: url('../../../assets/images/default-placeholder.jpg') center center;
+    position: relative;
+    background: url('../../../assets/images/products-banner.png') center center;
+    min-height: 25vh;
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
+      opacity: .75;
+      z-index: 0;
+    }
+
+    .content{
+      z-index: 1000;
+    }
   }
 
   .product-group{
