--- a/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
+++ b/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
@@ -22,6 +22,18 @@ section#desktop-navigation {
     background-color: transparent !important;
     color: white !important;
     box-shadow: none !important;
+
+    div#navigation{
+      box-shadow: 0 0 0 0;
+
+      ul{
+        li{
+          div.language-picker{
+            border-left: 3px solid white;
+          }
+        }
+      }
+    }
   }
 
   div#navigation {
@@ -32,9 +44,7 @@ section#desktop-navigation {
     align-items: center;
     justify-content: space-between;
 
-    &.transparent{
-      box-shadow: 0 0 0 0;
-    }
+
 
     span[class*="ion-ios-"] {
       padding: 0 5px;
@@ -59,6 +69,19 @@ section#desktop-navigation {
         text-align: center;
         list-style: none;
         cursor: pointer;
+
+        div.language-picker{
+          border-left: 3px solid black;
+          display: inline-flex;
+          justify-content: center;
+          font-size: 1.2em;
+          font-weight: bold;
+
+          *{
+            margin: 0 10px;
+          }
+
+        }
 
         a {
           font-size: 1.2em;
@@ -104,15 +127,22 @@ div.sub-menu-desktop {
 
   .sub-menu-desktop-description {
     background-color: $main-color;
+    color: white;
 
-    a{
-      color: white !important;
-    }
+  a{
+    color: white;
+  }
+
   }
 
   .sub-menu-desktop-content {
     flex: 1;
     background-color: white;
+
+    .active-language{
+      color: $main-color;
+      font-weight: bolder;
+    }
   }
 
   a {
