--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -14,6 +14,7 @@
   margin-bottom: 30px;
   transition: all .2s ease-in-out;
   position: relative;
+  overflow: hidden;
 
   &:hover {
     transform: scale(1.025);
@@ -49,14 +50,17 @@
         background-color: $main-color;
 
         &.BOTTLE_WASHERS {
+          margin: 5px 0;
           background-color:$main-color;
         }
 
         &.FILLERS {
+          margin: 5px 0;
           background-color: $filler-color;
         }
 
         &.OTHERS {
+          margin: 5px 0;
           background-color: $others-color;
         }
 
@@ -67,8 +71,8 @@
 
   .product-content {
     padding: 5px;
-    min-height: 50px;
-    max-height: 50px;
+    min-height: 100px;
+    max-height: 100px;
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
