--- a/src/app/pages/contact/contact.page.scss
+++ b/src/app/pages/contact/contact.page.scss
@@ -13,16 +13,9 @@ section#contact {
   background-color: $card-background-color;
   margin-top: $nav-bar-height;
 
-  div.contact-banner {
-    color: white;
-    height: auto;
-    min-height: 25vh;
+  div.banner {
     background-size: cover !important;
     background: url("../../../assets/images/people.jpg") center top;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
   }
 
   .contact-content {
